--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ more-itertools==10.5.0
 mysql-connector-python==9.1.0
 nh3==0.2.19
 packaging==24.2
+passlib==1.7.4
 pipdeptree==2.16.2
 pkginfo==1.10.0
 platformdirs==4.3.6
