--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ MarkupSafe==3.0.2
 mdurl==0.1.2
 more-itertools==10.5.0
 mysql-connector-python==9.1.0
+mysqlclient==2.2.7
 nh3==0.2.19
 packaging==24.2
 passlib==1.7.4
@@ -45,12 +46,13 @@ Pygments==2.18.0
 PyMySQL==1.1.1
 pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-engineio==4.10.1
 python-multipart==0.0.19
 python-socketio==5.11.4
 readme_renderer==44.0
 redis==5.2.1
-reflex==0.6.6.post3
+reflex==0.6.7
 reflex-chakra==0.6.2
 reflex-hosting-cli==0.1.30
 requests==2.32.3
